--- a/index.Rmd
+++ b/index.Rmd
@@ -1,34 +1,47 @@
 --- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+title: "DATA1001 FAQ"
+author: "USYD"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+description: "A public FAQ for DATA1001"
 ---
 
-# Prerequisites
+# Welcome {.unnumbered}
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
-
-The **bookdown** package can be installed from CRAN or Github:
-
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('assets/welcome.jpg')
 ```
 
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
+This book aims to be a FAQ repository for students taking DATA1001 at USYD.
+**Note that this FAQ is for R and RStudio.**
+If you have other queries related to this unit, check Canvas or Ed.
 
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.org/tinytex/>.
+This book is not endorsed by USYD in any way. **It is community-driven and open to the public.** 
 
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
+# How do I use this book?
+
+- Click on the sections in the sidebar to the left to navigate to the specific FAQ item.
+- You may be able to navigate to subsections within each item using the sidebar on the right ("On this page").
+
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('assets/faqsplash.jpg')
 ```
+
+# What do I do if I find errors in this book?
+
+```{r echo=FALSE, out.width='100%'}
+knitr::include_graphics('assets/errorfix.jpg')
+```
+
+Great work in detecting the problem! There are two ways:
+
+1. Post the issue on Ed.
+2. Submit an issue on this project's GitHub Issues page.
+
+Either way, try to include details of the error(s) including a link to the page.
+We will get someone to fix it.
